--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Three.js Isometric Cube Game</title>
+  <title>Bewerbung Team4Media</title>
   <link rel="stylesheet" href="./style.css">
   <script type="importmap">
     {
@@ -61,25 +61,49 @@
     </div>
     <p id="loading-text">Mission wird geladen...</p>
   </div>
-
-  <div id="info"
-    style="position: absolute; top: 10px; left: 10px; color: white; background: rgba(0,0,0,0.2); padding: 10px; border-radius: 5px; font-family: sans-serif;">
+  <div id="info" class="sci-fi-card">
     Benutze die Pfeiltasten um dich zu bewegen
   </div>
-
-  <div id="collected-list"
-    style="position: absolute; top: 10px; right: 10px; width: 250px; color: white; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 5px; font-family: sans-serif; height: 90vh; overflow-y: auto;">
-    <h3 style="margin-top: 0; border-bottom: 1px solid white; padding-bottom: 5px;">Informationen </h3>
-    <ul id="collected-items" style="list-style-type: none; padding: 0;">
-      <!-- Items will be added here -->
+  <div id="collected-list" class="sci-fi-card">
+    <h3 class="sci-fi-title">Informationen <span id="collection-counter"
+        style="float: right; font-size: 0.8em; color: #00ffff; margin-top: 5px;">0 / 5</span></h3>
+    <ul id="collected-items">
     </ul>
   </div>
-
-  <!-- Modal Structure -->
   <div id="modal">
-    <div id="modal-content">
-      <div id="modal-preview" style="width: 200px; height: 200px; margin: 0 auto; display: none;"></div>
-      <p id="modal-text">Some text in the Modal..</p>
+    <div id="modal-wrapper">
+      <div id="profile-card" class="sci-fi-card">
+        <h3 class="sci-fi-title">TARGET</h3>
+        <img src="assets/img/me.jpg" alt="Profile" id="profile-img">
+        <h2 id="profile-name">Maximilian</h2>
+        <p id="profile-age">Alter: 25</p>
+        <p id="profile-desc">Medieninformatiker</p>
+        <p id="profile-desc">Hochschule Osnabrück</p>
+      </div>
+      <div id="modal-content" class="sci-fi-card">
+        <div id="modal-preview" style="width: 200px; height: 200px; margin: 0 auto; display: none;"></div>
+        <p id="modal-text">Text hier.</p>
+      </div>
+    </div>
+  </div>
+  <div id="final-modal"
+    style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 2000; justify-content: center; align-items: center;">
+    <div class="sci-fi-card"
+      style="width: 80%; max-width: 800px; padding: 40px; text-align: left; max-height: 90vh; overflow-y: auto;">
+      <h1 class="sci-fi-title" style="text-align: center; font-size: 2.5em; margin-bottom: 30px;">MISSION ERFÜLLT</h1>
+      <h2 class="sci-fi-title" style="text-align: center; font-size: 1.5em; margin-bottom: 30px; border-bottom: none;">
+        Daten erfolgreich
+        gesammelt</h2>
+      <div id="final-summary-text" style="color: #cceeff; line-height: 1.6; font-size: 1.1em;">
+      </div>
+      <div style="text-align: center; margin-top: 30px; display: flex; justify-content: center; gap: 20px;">
+        <button onclick="location.reload()"
+          style="padding: 15px 30px; font-size: 1.2em; cursor: pointer;">NEUSTART</button>
+        <a href="assets/Bewerbungsunterlagen.pdf" download="Bewerbungsunterlagen_Maximilian.pdf"
+          style="text-decoration: none;">
+          <button style="padding: 15px 30px; font-size: 1.2em; cursor: pointer;">BEWERBUNGSUNTERLAGEN</button>
+        </a>
+      </div>
     </div>
   </div>
   <script type="module" src="/main.js?v=9"></script>
