--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bewerbung Team4Media</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <script type="importmap">
     {
       "imports": {
@@ -92,16 +94,18 @@
       style="width: 80%; max-width: 800px; padding: 40px; text-align: left; max-height: 90vh; overflow-y: auto;">
       <h1 class="sci-fi-title" style="text-align: center; font-size: 2.5em; margin-bottom: 30px;">MISSION ERFÜLLT</h1>
       <h2 class="sci-fi-title" style="text-align: center; font-size: 1.5em; margin-bottom: 30px; border-bottom: none;">
-        Daten erfolgreich
-        gesammelt</h2>
+        Daten erfolgreich gesammelt und Personenprofil erstellt</h2>
       <div id="final-summary-text" style="color: #cceeff; line-height: 1.6; font-size: 1.1em;">
       </div>
       <div style="text-align: center; margin-top: 30px; display: flex; justify-content: center; gap: 20px;">
         <button onclick="location.reload()"
           style="padding: 15px 30px; font-size: 1.2em; cursor: pointer;">NEUSTART</button>
-        <a href="assets/Bewerbungsunterlagen.pdf" download="Bewerbungsunterlagen_Maximilian.pdf"
-          style="text-decoration: none;">
-          <button style="padding: 15px 30px; font-size: 1.2em; cursor: pointer;">BEWERBUNGSUNTERLAGEN</button>
+        <a href="assets/BL.pdf" download="Bewerbungsunterlagen_MaximilianKassenbaum.pdf" style="text-decoration: none;">
+          <button
+            style="padding: 15px 30px; font-size: 1.2em; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px;">
+            <span class="material-symbols-outlined">download</span>
+            BEWERBUNGSUNTERLAGEN FREIGEBEN
+          </button>
         </a>
       </div>
     </div>
