--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bewerbung Team4Media</title>
+  <title>Bewerbung Hoch5</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -18,6 +18,10 @@
     }
   </script>
   <style>
+    #ufo-preview canvas {
+      box-shadow: none !important;
+    }
+
     /* Loader Styles */
     #loader {
       position: fixed;
@@ -87,6 +91,7 @@
         <p id="modal-text">Text hier.</p>
       </div>
     </div>
+    <div id="ufo-preview" style="width: 800px; height: 400px; margin: 20px auto 0 auto; display: none;"></div>
   </div>
   <div id="final-modal"
     style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 2000; justify-content: center; align-items: center;">
