--- a/index.html
+++ b/index.html
@@ -77,21 +77,24 @@
     </ul>
   </div>
   <div id="modal">
-    <div id="modal-wrapper">
-      <div id="profile-card" class="sci-fi-card">
-        <h3 class="sci-fi-title">TARGET</h3>
-        <img src="assets/img/me.jpg" alt="Profile" id="profile-img">
-        <h2 id="profile-name">Maximilian</h2>
-        <p id="profile-age">Alter: 25</p>
-        <p id="profile-desc">Medieninformatiker</p>
-        <p id="profile-desc">Hochschule Osnabrück</p>
+    <div
+      style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; max-height: 100vh; padding: 2vh; box-sizing: border-box; gap: 20px; max-width: 900px; margin: 0 auto;">
+      <div id="modal-wrapper" style="margin: 0; width: 100%;">
+        <div id="profile-card" class="sci-fi-card">
+          <h3 class="sci-fi-title">TARGET</h3>
+          <img src="assets/img/me.jpg" alt="Profile" id="profile-img">
+          <h2 id="profile-name">Maximilian</h2>
+          <p id="profile-age">Alter: 25</p>
+          <p id="profile-desc">Medieninformatiker</p>
+          <p id="profile-desc">Hochschule Osnabrück</p>
+        </div>
+        <div id="modal-content" class="sci-fi-card">
+          <div id="modal-preview" style="width: 200px; height: 200px; margin: 0 auto; display: none;"></div>
+          <p id="modal-text">Text hier.</p>
+        </div>
       </div>
-      <div id="modal-content" class="sci-fi-card">
-        <div id="modal-preview" style="width: 200px; height: 200px; margin: 0 auto; display: none;"></div>
-        <p id="modal-text">Text hier.</p>
-      </div>
+      <div id="ufo-preview" style="width: 100%; max-width: 800px; flex: 1; min-height: 0; display: none;"></div>
     </div>
-    <div id="ufo-preview" style="width: 800px; height: 400px; margin: 20px auto 0 auto; display: none;"></div>
   </div>
   <div id="final-modal"
     style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 2000; justify-content: center; align-items: center;">
